kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: homework
  labels:
    app: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      # nodeSelector:
      #   homework: 'true'
      containers:
        - name: web
          image: python:3
          command: ['python3', '-m', 'http.server', '8000']
          workingDir: /homework
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /index.html
              port: 8000
          volumeMounts:
            - name: content
              mountPath: '/homework'
          lifecycle:
            preStop:
              exec:
                command: ['/usr/bin/rm', '/homework/index.html']

      volumes:
        - name: content
          emptyDir: {}
